# demo-app

./: .gitignore  Cargo.toml  LICENSE  example.env  run.ps1  run.sh
app/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
app/src-tauri/: Cargo.toml  build.rs  example.env  tauri.conf.json
app/src-tauri/src/: auth.rs  context.rs  error.rs  hello_grpc.rs  logger.rs  main.rs
app/src-tauri/src/tic_tac_toe/: embedded.rs  game_message.rs  grpc.rs  mod.rs  rest_api.rs
app/src/api/: auth.ts  index.ts  ky.ts  tic_tac_toe.ts  ws_client.ts
app/src/lib/: Greet.svelte
app/src/model/: tic_tac_toe.ts
app/src/routes/: +layout.svelte  Header.svelte
app/src/routes/about/: +page.svelte
app/src/routes/game/: +layout.svelte  Header.svelte
app/src/routes/game/about/: +page.svelte
app/src/routes/game/tic_tac_toe/: +page.svelte
app/src/routes/login/: +page.svelte
app/src/routes/tic_tac_toe/: +page.svelte
core/: Cargo.toml
core/benches/: my_benchmark.rs
core/examples/: demo.rs
core/src/: game_message.rs  lib.rs  play.rs  tic_tac_toe.rs  user.rs
core/tests/: tic_tac_toe_integration_test.rs
examples/closure/: Cargo.toml
examples/closure/src/: main.rs
examples/demo/: Cargo.toml
examples/function/: Cargo.toml
examples/function/src/: main.rs
examples/lifetime/: Cargo.toml
examples/lifetime/src/: main.rs
examples/money/: Cargo.toml
examples/money/src/: main.rs
examples/overflow/: Cargo.toml
examples/overflow/src/: main.rs
examples/tokio/: Cargo.toml
examples/tokio/src/: main.rs
pics/: architecture.excalidraw
proto/: game.proto
service/: Cargo.toml
service/src/: demo.rs  lib.rs  logger.rs  tic_tac_toe.rs
static/: hello.md  test.html
wasm/: Cargo.toml
wasm/src/: demo.rs  error.rs  lib.rs  tic_tac_toe.rs
web/: Cargo.toml  build.rs
web/src/: app_context.rs  auth.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  open_api.rs  routers.rs  tic_tac_toe.rs  web_socket.rs
web/src/grpc/: mod.rs  tic_tac_toe.rs
