[workspace]

members = [
    "app/src-tauri",
    "core",
    "service",
    "web",
    "wasm",
    "examples/*",
]

[workspace.dependencies]
dotenvy = { version = "0.15" }
log = { version = "0.4" }
rand = { version = "0.8" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.29", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
