[workspace]

members = [
    "app/src-tauri",
    "core",
    "service",
    "web",
    "wasm",
    "examples/*",
]

[workspace.dependencies]
chrono = { version = "0.4" }
dotenvy = { version = "0.15" }
futures-util = { version = "0.3" }
log = { version = "0.4" }
prost = { version = "0.12" }
rand = { version = "0.8" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.29", features = ["full"] }
tokio-stream = { version = "0.1" }
tonic = { version = "0.10" }
tonic-build = { version = "0.10" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = { version = "0.3", features = ["tls"] }
