[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "play"
path = "src/play.rs"

[dependencies]
rand = { worksapce = true }
serde = { workspace = true }
thiserror = { worksapce = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false
