[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-core = { path = "../core", package = "core" }
service = { path = "../service" }

argon2 = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
warp = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
